# visual_odometry_project

./: .gitignore  CMakeLists.txt  README.md
app/: vo_main.cpp
output/evaluation/: evaluation_summary.txt  frame_logs.csv  map_errors.csv  map_estimate_scaled.csv  pose_errors.csv  trajectory_compare.csv  trajectory_estimate.csv  trajectory_gt.csv
src/: dataset_io.cpp  dataset_io.h  epipolar_initializer.cpp  epipolar_initializer.h  evaluation.cpp  evaluation.h  triangulation.cpp  triangulation.h  vo_pipeline.cpp  vo_pipeline.h  vo_types.h
tests/: test_dataset_reader.cpp  test_initialization.cpp
tools/: plot_evaluation.py
